--- a/index.html
+++ b/index.html
@@ -1,71 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Processador de CSV</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="container mt-5">
-  <h2 class="text-center" style="color: #ff8c00">Processador de CSV</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Processador de Report</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="assets/icons-report/icons8-gráfico-de-saúde-ios-17-filled-32.png">
+  </head>
 
-  <!-- Forward Order -->
-  <div class="area-transferencia">
-    <h4>Forward Order</h4>
-    <div class="drop-area" id="drop-area-forward">
-      <p>Arraste e solte os arquivos CSV aqui</p>
-      <p>ou</p>
-      <input type="file" id="file-input-forward" multiple class="form-control mb-3" accept=".csv">
+  <body class="container mt-5">
+    <h2 class="text-center titulo-site">Processador de Report</h2>
+
+    <!-- Forward Order -->
+    <div class="area-transferencia">
+      <h4>Forward Order</h4>
+      <div class="drop-area" id="drop-area-forward">
+        <p>Arraste e solte os arquivos CSV aqui</p>
+        <p>ou</p>
+        <input type="file" id="file-input-forward" multiple class="form-control mb-3" accept=".csv" />
+      </div>
     </div>
-  </div>
 
-  <div id="loading-forward" class="text-center" style="display: none; color: #ff8c00;">
-    <p>⏳ Processando...</p>
-  </div>
-
-  <div class="resultado-tabela">
-    <h5 id="titulo-forward" style="display: none;"><i>PRÉVIA:</i></h5>
-    <table class="table table-striped table-bordered mt-1" id="results-table-forward" style="display: none">
-      <thead class="table-warning">
-        <tr>
-          <th>📌 Delivering Time</th>
-          <th>📌 Delivered Time</th>
-          <th>📌 OnHold Time</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <!-- Return Order -->
-  <div class="area-transferencia">
-    <h4>Return Order</h4>
-    <div class="drop-area" id="drop-area-return">
-      <p>Arraste e solte os arquivos CSV aqui</p>
-      <p>ou</p>
-      <input type="file" id="file-input-return" multiple class="form-control mb-3" accept=".csv">
+    <div id="loading-forward" class="text-center" style="display: none; color: #ff8c00">
+      <p>⏳ Processando...</p>
     </div>
-  </div>
 
-  <div id="loading-return" class="text-center" style="display: none; color: #ff8c00;">
-    <p>⏳ Processando...</p>
-  </div>
+    <div class="resultado-tabela">
+      <h5 id="titulo-forward" style="display: none"><i>PRÉVIA:</i></h5>
+      <table class="table table-striped table-bordered mt-1" id="results-table-forward" style="display: none">
+        <thead class="table-warning">
+          <tr>
+            <th>📌 Total LM Expedido</th>
+            <th>📌 Entregue</th>
+            <th>📌 OnHold</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
-  <div class="resultado-tabela">
-    <h5 id="titulo-return" style="display: none;"><i>PRÉVIA:</i></h5>
-    <table class="table table-striped table-bordered mt-1" id="results-table-return" style="display: none">
-      <thead class="table-warning">
-        <tr>
-          <th>📌 Total Revamp Expedido</th>
-          <th>📌 Total Revamp no Piso</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+    <!-- Return Order -->
+    <div class="area-transferencia">
+      <h4>Return Order</h4>
+      <div class="drop-area" id="drop-area-return">
+        <p>Arraste e solte os arquivos CSV aqui</p>
+        <p>ou</p>
+        <input type="file" id="file-input-return" multiple class="form-control mb-3" accept=".csv" />
+      </div>
+    </div>
 
-  <script src="js/script.js"></script>
-</body>
+    <div id="loading-return" class="text-center" style="display: none; color: #ff8c00">
+      <p>⏳ Processando...</p>
+    </div>
+
+    <div class="resultado-tabela">
+      <h5 id="titulo-return" style="display: none"><i>PRÉVIA:</i></h5>
+      <table class="table table-striped table-bordered mt-1" id="results-table-return" style="display: none">
+        <thead class="table-warning">
+          <tr>
+            <th>📌 Total Revamp Expedido</th>
+            <th>📌 Total Revamp no Piso</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
