--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <tr>
               <th>📌 Entregue</th>
               <th>📌 OnHold</th>
+              <th>📌 Hub Received</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -57,6 +58,7 @@
           <thead class="table-warning">
             <tr>
               <th>📌 Total Revamp no Piso</th>
+              <th>📌 Return Hub Received</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -80,7 +82,7 @@
         <table class="table table-striped table-bordered mt-1" id="results-table-pickup" style="display: none">
           <thead class="table-warning">
             <tr>
-              <th>📌 Total Pickup</th>
+              <th>📌 Recebidos FM</th>
               <th>📌 Entregue</th>
               <th>📌 Cancelado</th>
             </tr>
