feat: total LM expedido

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <table class="table table-striped table-bordered mt-1" id="results-table-br-assignment" style="display: none">
           <thead class="table-warning">
             <tr>
-              <th>📌 Total BRs</th>
+              <th>📌 Total LM Expedido</th>
               <th>📌 Atribuído</th>
               <th>📌 Não Atribuído</th>
             </tr>
