--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <th>📌 Entregue</th>
               <th>📌 OnHold</th>
               <th>📌 Hub Received</th>
+              <th>📌 Delivering</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -59,6 +60,7 @@
             <tr>
               <th>📌 Total Revamp no Piso</th>
               <th>📌 Return Hub Received</th>
+              <th>📌 Return Hub Returning</th>
             </tr>
           </thead>
           <tbody></tbody>
