--- a/index.html
+++ b/index.html
@@ -119,7 +119,22 @@
         </table>
       </div>
     </section>
+
   </div>
+  
+  <!-- Campos não extraídos da tabela -->
+  <section class="campos-manuais">
+    <h4>OnHolds Devolvidos na Base</h4>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="inputGroup-sizing-default">📦</span>
+      <input type="number" id="onholdsDevolvidos" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+    </div>
+    <h4>Total de Rotas no Piso</h4>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="inputGroup-sizing-default">🚗</span>
+      <input type="number" id="totalRotasPiso" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+    </div>
+  </section>
 
   <!-- Loading -->
   <div id="loading" class="text-center mt-4" style="display: none;">
