--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </table>
       </div>
     </section>
-  
+
     <!-- Return Order -->
     <section class="area-transferencia">
       <h4>Return Order</h4>
@@ -67,7 +67,7 @@
         </table>
       </div>
     </section>
-  
+
     <!-- Pickup Order -->
     <section class="area-transferencia">
       <h4>Pickup Order</h4>
@@ -93,7 +93,7 @@
         </table>
       </div>
     </section>
-  
+
     <!-- Br Assignment -->
     <section class="area-transferencia">
       <h4>Br Assignment</h4>
@@ -111,7 +111,7 @@
           <thead class="table-warning">
             <tr>
               <th>📌 Total LM Expedido</th>
-              <th>📌 Atribuído</th>
+              <th>📌 Total Veículo Exp.</th>
               <th>📌 Não Atribuído</th>
             </tr>
           </thead>
@@ -121,18 +121,20 @@
     </section>
 
   </div>
-  
+
   <!-- Campos não extraídos da tabela -->
   <section class="campos-manuais">
     <h4>OnHolds Devolvidos na Base</h4>
     <div class="input-group mb-3">
       <span class="input-group-text" id="inputGroup-sizing-default">📦</span>
-      <input type="number" id="onholdsDevolvidos" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+      <input type="number" id="onholdsDevolvidos" class="form-control" aria-label="Sizing example input"
+        aria-describedby="inputGroup-sizing-default">
     </div>
     <h4>Total de Rotas no Piso</h4>
     <div class="input-group mb-3">
       <span class="input-group-text" id="inputGroup-sizing-default">🚗</span>
-      <input type="number" id="totalRotasPiso" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+      <input type="number" id="totalRotasPiso" class="form-control" aria-label="Sizing example input"
+        aria-describedby="inputGroup-sizing-default">
     </div>
   </section>
 
@@ -147,7 +149,8 @@
   <!-- Relatório Final Completo -->
   <div id="report-container" class="mt-4" style="display: none;">
     <img src="ShopeeLogo.png" class="mb-3" alt="Logo Shopee" width="150">
-    <div class="text-center mb-3" style="background-color: var(--laranja-shopee); padding: 5px; border-radius: 5px; color: white; width: 100%;">
+    <div class="text-center mb-3"
+      style="background-color: var(--laranja-shopee); padding: 5px; border-radius: 5px; color: white; width: 100%;">
       <h3 class="text-center" style="letter-spacing: 2.3px;">📒 REPORT</h3>
       <h4>📆 <span id="report-datetime" style="font-weight: 300;"></span></h4>
     </div>
@@ -157,8 +160,10 @@
   </div>
 
   <!-- Botões -->
-  <div class="text-center mt-3 d-flex" style="justify-content: center; align-items: center; gap: 20px; margin-bottom: 20px;">
-    <button id="generate-report" class="btn btn-primary" style="background-color: var(--laranja-shopee); border: none;">📊 Gerar Relatório</button>
+  <div class="text-center mt-3 d-flex"
+    style="justify-content: center; align-items: center; gap: 20px; margin-bottom: 20px;">
+    <button id="generate-report" class="btn btn-primary"
+      style="background-color: var(--laranja-shopee); border: none;">📊 Gerar Relatório</button>
     <div class="text-center" id="print-report" style="display: none;">
       <button id="capture-report" class="btn btn-success">📸 Baixar Print</button>
     </div>
