--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <th>📌 Total Revamp no Piso</th>
               <th>📌 Return Hub Received</th>
               <th>📌 Return Hub Returning</th>
+              <th>📌 OnHold</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -86,7 +87,6 @@
             <tr>
               <th>📌 Recebidos FM</th>
               <th>📌 Entregue</th>
-              <th>📌 Cancelado</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -112,7 +112,6 @@
             <tr>
               <th>📌 Total LM Expedido</th>
               <th>📌 Total Veículo Exp.</th>
-              <th>📌 Não Atribuído</th>
             </tr>
           </thead>
           <tbody></tbody>
