--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <th>📌 OnHold</th>
               <th>📌 Hub Received</th>
               <th>📌 Delivering</th>
+              <th>📌 Total Receivid</th>
             </tr>
           </thead>
           <tbody></tbody>
